tests/snapshots/parse_snapshots__t01_const_decl_with_binary.snap
---
source: tests/parse_snapshots.rs
expression: stmts
---
[
    ConstDeclaration {
        name: "x",
        type_annotation: None,
        init: Binary {
            left: Number {
                value: 1,
                span: Span {
                    start: 10,
                    end: 11,
                },
            },
            op: Add,
            right: Number {
                value: 2,
                span: Span {
                    start: 14,
                    end: 15,
                },
            },
            span: Span {
                start: 10,
                end: 15,
            },
        },
        span: Span {
            start: 0,
            end: 16,
        },
    },
]
