tests/snapshots/parse_snapshots__t02_precedence_mul_then_add.snap
---
source: tests/parse_snapshots.rs
expression: stmts
---
[
    ConstDeclaration {
        name: "x",
        type_annotation: None,
        init: Binary {
            left: Binary {
                left: Number {
                    value: 1,
                    span: Span {
                        start: 10,
                        end: 11,
                    },
                },
                op: Add,
                right: Number {
                    value: 2,
                    span: Span {
                        start: 14,
                        end: 15,
                    },
                },
                span: Span {
                    start: 10,
                    end: 15,
                },
            },
            op: Multiply,
            right: Number {
                value: 3,
                span: Span {
                    start: 18,
                    end: 19,
                },
            },
            span: Span {
                start: 10,
                end: 19,
            },
        },
        span: Span {
            start: 0,
            end: 20,
        },
    },
]
