tests/snapshots/parse_snapshots__t03_ternary.snap
---
source: tests/parse_snapshots.rs
expression: stmts
---
[
    ConstDeclaration {
        name: "x",
        type_annotation: None,
        init: Conditional {
            test: Boolean {
                value: true,
                span: Span {
                    start: 10,
                    end: 14,
                },
            },
            consequent: Number {
                value: 1,
                span: Span {
                    start: 17,
                    end: 18,
                },
            },
            alternate: Number {
                value: 2,
                span: Span {
                    start: 21,
                    end: 22,
                },
            },
            span: Span {
                start: 10,
                end: 22,
            },
        },
        span: Span {
            start: 0,
            end: 23,
        },
    },
]
