tests/snapshots/parse_snapshots__t04_array_literal.snap
---
source: tests/parse_snapshots.rs
expression: stmts
---
[
    ConstDeclaration {
        name: "xs",
        type_annotation: None,
        init: Array {
            elements: [
                Number {
                    value: 1,
                    span: Span {
                        start: 12,
                        end: 13,
                    },
                },
                Number {
                    value: 2,
                    span: Span {
                        start: 15,
                        end: 16,
                    },
                },
                Number {
                    value: 3,
                    span: Span {
                        start: 18,
                        end: 19,
                    },
                },
            ],
            span: Span {
                start: 11,
                end: 20,
            },
        },
        span: Span {
            start: 0,
            end: 21,
        },
    },
]
