tests/snapshots/parse_snapshots__t07_resilient_well_formed.snap
---
source: tests/parse_snapshots.rs
expression: ret
---
ParserReturn {
    statements: [
        ConstDeclaration {
            name: "x",
            type_annotation: None,
            init: Binary {
                left: Number {
                    value: 1,
                    span: Span {
                        start: 10,
                        end: 11,
                    },
                },
                op: Add,
                right: Number {
                    value: 2,
                    span: Span {
                        start: 14,
                        end: 15,
                    },
                },
                span: Span {
                    start: 10,
                    end: 15,
                },
            },
            span: Span {
                start: 0,
                end: 16,
            },
        },
    ],
    errors: [],
    panicked: false,
}
