tests/snapshots/parse_snapshots__t08_resilient_recoverable_missing_semicolon.snap
---
source: tests/parse_snapshots.rs
expression: ret
---
ParserReturn {
    statements: [
        ConstDeclaration {
            name: "x",
            type_annotation: None,
            init: Number {
                value: 5,
                span: Span {
                    start: 10,
                    end: 11,
                },
            },
            span: Span {
                start: 0,
                end: 11,
            },
        },
    ],
    errors: [
        ParseError {
            message: "expected ';'",
            span: Span {
                start: 10,
                end: 11,
            },
        },
    ],
    panicked: false,
}
