tests/snapshots/parse_snapshots__t09_resilient_fatal_discards_tree.snap
---
source: tests/parse_snapshots.rs
expression: ret
---
ParserReturn {
    statements: [],
    errors: [
        ParseError {
            message: "unexpected token in expression: Semicolon",
            span: Span {
                start: 10,
                end: 11,
            },
        },
    ],
    panicked: true,
}
